Kubernetes/Lab.RateMyBeer.Frontend/base/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ratemybeer-frontend
  labels:
    name: lab-ratemybeer-frontend
  
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - host: ratemybeer.westeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lab-ratemybeer-frontend
            port: 
              number: 80
